Creato con Colab

--- a/esercizio1.ipynb
+++ b/esercizio1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNTCmBByQBjmTWSaA8WCc9C",
+      "authorship_tag": "ABX9TyPlWz8dMsze+WRWP/gfnxdT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -411,8 +411,44 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "faccio 3 strati (50-50-10)"
+      ],
+      "metadata": {
+        "id": "a-KmqMcehsxC"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Mlp:\n",
+        "  def __init__(self, device) -> None:\n",
+        "    # nota: 28*28 = 784 elems\n",
+        "\n",
+        "    # Strato 1\n",
+        "    self.w1 = torch.randn(size=(784, 50), requires_grad=True, device=device)\n",
+        "    self.b1 = torch.zeros(size=(1, 50), requires_grad=True, device=device)\n",
+        "\n",
+        "    # Strato 2\n",
+        "    self.w2 = torch.randn(size=(50, 50), requires_grad=True, device=device)\n",
+        "    self.b2 = torch.zeros(size=(1, 50), requires_grad=True, device=device)\n",
+        "\n",
+        "    # Strato 3\n",
+        "    self.w3 = torch.randn(size=(50, 10), requires_grad=True, device=device)\n",
+        "    self.b3 = torch.zeros(size=(1, 10), requires_grad=True, device=device)\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    # quello che mi arriva: x.shape = (batch_size, 28, 28)\n",
+        "    x = x.reshape(-1, 784)            # stiro la griglia su un unico vettore\n",
+        "\n",
+        "    # primo strato\n",
+        "    x =  x@self.w1 + self.b1\n",
+        "\n",
+        ""
+      ],
       "metadata": {
         "id": "7Zqk1rXjhXll"
       },
