Creato con Colab

--- a/esercizio1.ipynb
+++ b/esercizio1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPTIlcDH2wvfXeW1fBKSlfO",
+      "authorship_tag": "ABX9TyM8Kw+mR0ozz6WzGQ32EqXu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -986,6 +986,81 @@
             "Loss: 0.7974953386187553\n",
             "Loss: 0.6752268573641778\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test = testset.data.float() / 255\n",
+        "y_test = testset.targets\n"
+      ],
+      "metadata": {
+        "id": "sWUDyjUDsVmN"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test_preds = mlp.forward(x_test)"
+      ],
+      "metadata": {
+        "id": "RS5FWG-3sglM"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test_preds.argmax(dim=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kgSFV8jisoTP",
+        "outputId": "0839d5fe-dbb5-488f-eda4-6787dc3e27d5"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([7, 0, 1,  ..., 9, 8, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.mean((y_test_preds.argmax(dim=1) == y_test).float())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xdKDnDOAsxc9",
+        "outputId": "19f5164e-4ce8-4e9f-837c-f6be1e462259"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.7394)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
         }
       ]
     }
